# PaloAlto-SkillBridge

./: .env.example  .gitignore  DESIGN_DOCUMENTATION.md  DESIGN_SUMMARY.md  JD.txt  README.md  pyproject.toml
app/: main.py
app/core/: config.py  logger.py
app/models/: certification.py  course.py  graph.py  profile.py  user.py
app/services/: entity_deduplicator.py  entity_extractor.py  entity_linker.py  extraction_pipeline.py  fast_track_generator.py  gap_analyzer.py  github_analyzer.py  graph_manager.py  heuristic_extractor.py  job_ingestion.py  learning_path_generator.py  learning_resource_manager.py  linkedin_scraper.py  nlp_extractor.py  optimized_path_generator.py  pending_queue.py  profile_builder.py  resolver.py  resume_parser.py  roadmap_generator.py  task_queue.py  topic_extractor.py
app/tests/: conftest.py  test_cert_discovery_service.py  test_course_discovery_aggregator.py  test_entity_deduplicator.py  test_entity_extractor.py  test_entity_linker.py  test_extraction_pipeline.py  test_fast_track_generator.py  test_gap_analyzer.py  test_gap_analyzer_graph_only_courses.py  test_github_analyzer.py  test_graph_manager.py  test_graph_manager_skill_enrichment.py  test_heuristic_extractor.py  test_learning_path_generator.py  test_learning_resource_manager.py  test_main.py  test_models_profile.py  test_nlp_extractor.py  test_onet_integration_live_discovery.py  test_optimized_path_generator.py  test_pending_queue.py  test_profile_builder.py  test_resolver.py  test_task_queue.py  (+11 more)
data/: profiles.csv  skills_library.json
frontend/: package-lock.json  package.json
(+42 files in other folders)
