[project]
name = "skillbridge"
version = "0.1.0"
description = "Skill-Bridge Navigator using Knowledge Graph"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "networkx>=3.2",
    "numpy>=1.26.0",
    "sentence-transformers>=2.5.0",
    "python-multipart>=0.0.6",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-groq>=0.0.1",
    "spacy>=3.7.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.0.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
]
